# DbWebserver-seriesplugin

./: CMakeLists.txt  README.md  seriesapplication.cpp  seriesapplication.h  seriesplugin.cpp  seriesplugin.h  seriesplugin.pro
